# matrix-lightning-tip-bot

./: Cargo.toml  Dockerfile  README.MD
example-configs/: config.conf
migrations/2025-06-23-000001_ln_addresses/: down.sql  up.sql
migrations/2025-06-26-000002_matrix_store/: down.sql  up.sql
migrations/2025-06-27-000003_dm_rooms/: down.sql  up.sql
migrations/2025-06-28-000004_client_auth/: down.sql  up.sql
src/: as_client.rs  config.rs  encryption.rs  main.rs
src/application_service/: application_service.rs  http_methods.rs  mod.rs  protocol.rs  registration.rs  txnid.rs
src/data_layer/: mod.rs  models.rs  schema.rs
src/lnbits_client/: mod.rs
src/matrix_bot/: business_logic.rs  commands.rs  mod.rs  utils.rs
