[package]
name = "matrix-lightning-tip-bot"
version = "0.9.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# features = ["full"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
clap = "4.5.40"
argfile = "0.2.1"
wild = "2.2.1"
url = "2.5.2"
matrix-sdk-crypto = "0.12.0"
matrix-sdk-sqlite = { version = "0.12.0", features = ["crypto-store"] }
tokio = { version = "1.40.0", features = ["full"] }
simple_logger = "5.0.0"
log = "0.4.22"
dotenv = "0.15.0"
diesel = { version = "2.2.4", features = ["sqlite", "numeric", "chrono", "r2d2", "uuid"] }
simple-error = "0.3.1"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
qrcode-generator = "5.0.0"
mime = "0.3.17"
mime_guess = "2.0.4"
lightning-invoice = "0.33.2"
tl = "0.7.8"
lnurl-rs = "0.9.0"
warp = "0.3.7"
http = "0.2"
futures = "0.3"
rand = "0.9"
serde_yaml = "0.9"
ruma = { version = "0.12.3", features = ["appservice-api", "client-api"] }
tempfile = "3.10.1"
regex = "1"
urlencoding = "2.1.2"

[[bin]]
name = "generate_registration"
path = "src/bin/generate_registration.rs"
